fix bottom nav on mobile

--- a/src/styles/config.css
+++ b/src/styles/config.css
@@ -5,6 +5,11 @@
 
 @plugin '@headlessui/tailwindcss';
 
+/* Remove firebase emulator warning at the bottom of the page */
+.firebase-emulator-warning {
+  display: none;
+}
+
 @theme {
   --color-*: initial;
   --color-transparent: transparent;
